# sea-query

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: diesel.yml  release-bot.yml  rust.yml
benches/: basic.rs  query_building.rs  value.rs
build-tools/: cargo-publish.sh  cleanup.sh  publish.sh  rustclippy.sh  rustfmt.sh
changelog/: 1.0.0-rc.20.md  1.0.0-rc.22.md  1.0.0-rc.23.md  1.0.0-rc.24.md  1.0.0-rc.26.md  1.0.0-rc.27.md  1.0.0-rc.28.md  1.0.0-rc.29.md  1.0.0-rc.30.md  1.0.0-rc.31.md  1.0.0-rc.32.md  1.0.0-rc.34.md  1.0.0.md  1.0.1.md  sea-query-sqlx-0.9.0.md  sea-query-sqlx-0.9.1.md
develop/: cargo-readme.sh  test-features.sh
examples/: derive.rs  main.rs  sqlx.rs  sqlx_mysql.rs  sqlx_postgres.rs
examples/cockroach/: Cargo.toml  Readme.md
examples/cockroach/src/: main.rs
examples/cockroach_json/: Cargo.toml  Readme.md
examples/cockroach_json/src/: main.rs
examples/diesel_mysql/: Cargo.toml  Readme.md
examples/diesel_postgres/: Cargo.toml  Readme.md
examples/diesel_postgres/src/: main.rs
examples/diesel_sqlite/: Cargo.toml  Readme.md
examples/diesel_sqlite/src/: main.rs
examples/postgres/: Cargo.toml  Readme.md
examples/postgres/src/: main.rs
examples/postgres_json/: Cargo.toml
examples/postgres_json/src/: main.rs
examples/rusqlite/: Cargo.toml  Readme.md
examples/rusqlite/src/: main.rs
examples/sqlx_any/: Cargo.toml  Readme.md
examples/sqlx_any/src/: main.rs
examples/sqlx_mysql/: Cargo.toml  README.md  Readme.md
examples/sqlx_mysql/src/: main.rs
examples/sqlx_postgres/: Cargo.toml  README.md  Readme.md
examples/sqlx_postgres/src/: main.rs
examples/sqlx_sqlite/: Cargo.toml  Readme.md
examples/sqlx_sqlite/src/: main.rs
sea-driver/: Cargo.toml
sea-driver/src/: lib.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs  utils.rs
sea-query/: Cargo.toml  README.md
sea-query-attr/: Cargo.toml
sea-query-attr/src/: lib.rs
sea-query-attr/tests/: integration_tests.rs  test_build.rs
sea-query-attr/tests/compile-fail/: enum.rs  enum.stderr  tuple_struct.rs  tuple_struct.stderr  unknown_field.rs  unknown_field.stderr
sea-query-attr/tests/pass/: default.rs  escaping.rs  prefixed.rs  renamed.rs  suffixed.rs  table_iden.rs
sea-query-binder/: Cargo.toml
sea-query-binder/src/: lib.rs  sqlx.rs  sqlx_any.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs  values.rs
sea-query-binders/: Cargo.toml
sea-query-binders/src/: sqlx_mysql.rs  sqlx_postgres.rs
sea-query-derive/: Cargo.toml  Readme.md  copy.sh
sea-query-derive-internal/: Cargo.toml
sea-query-derive-internal/src/: iden_attr.rs  iden_variant.rs  lib.rs
sea-query-derive/src/: enum_def.rs  error.rs  iden_attr.rs  iden_path.rs  iden_variant.rs  lib.rs  raw_query.rs  raw_sql.rs  sqlx.rs
sea-query-derive/src/iden/: attr.rs  error.rs  iden_static.rs  mod.rs  path.rs  write_arm.rs
sea-query-derive/src/raw_sql/: token.rs
sea-query-derive/tests/: test_build.rs
sea-query-derive/tests/compile-fail/: empty_list_iden.rs  empty_list_iden.stderr  mutli_field_flatten.rs  mutli_field_flatten.stderr  path_iden.rs  path_iden.stderr  path_method.rs  path_method.stderr  unsupported_container.rs  unsupported_container.stderr  wrong_literal_type.rs  wrong_literal_type.stderr
sea-query-derive/tests/compile-fail/enum_def/: enum.rs  enum.stderr  tuple_struct.rs  tuple_struct.stderr  unknown_field.rs  unknown_field.stderr
sea-query-derive/tests/pass/: 3_level_flatten.rs  flattened_named.rs  flattened_unnamed.rs  meta_list_renaming_everything.rs  renamed_unit_struct.rs  renaming_everything.rs  renaming_table.rs  simple_unit_struct.rs  without_attributes.rs
sea-query-derive/tests/pass-static/: 3_level_flatten.rs  flattened_named.rs  flattened_unnamed.rs  meta_list_renaming_everything.rs  renamed_unit_struct.rs  renaming_table.rs  simple_unit_struct.rs  without_attributes.rs
sea-query-derive/tests/pass/enum_def/: default.rs  prefixed.rs  suffixed.rs  table_iden.rs
sea-query-diesel/: Cargo.toml
sea-query-diesel/src/: lib.rs  query.rs  value.rs
sea-query-diesel/src/backend/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
sea-query-driver/: Cargo.toml  README.md
sea-query-driver/src/: lib.rs  rusqlite.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs  utils.rs
sea-query-postgres/: Cargo.toml
sea-query-postgres-types/: Cargo.toml
sea-query-postgres-types/src/: lib.rs  range.rs
sea-query-postgres-types/src/range/: postgres_driver.rs
sea-query-postgres/src/: lib.rs
sea-query-rbatis/: Cargo.toml  README.md
sea-query-rbatis/src/: lib.rs
sea-query-rusqlite/: Cargo.toml
sea-query-rusqlite/src/: lib.rs  rusqlite.rs
sea-query-sqlx/: Cargo.toml
sea-query-sqlx-postgres/: Cargo.toml
sea-query-sqlx-postgres/src/: lib.rs  postgres.rs  sqlx.rs
sea-query-sqlx/src/: lib.rs  sqlx.rs  sqlx_any.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs  values.rs
sea-query-test/: Cargo.toml
sea-query-test/src/: lib.rs
sea-query/src/: expr.rs  lib.rs  prepare.rs  types.rs  value.rs
sea-query/tests/: mod.rs
src/: deps.rs  error.rs  exception.rs  expr.rs  func.rs  if_else.rs  lib.rs  options.rs  pg_func.rs  prepare.rs  primitive_value.rs  raw_sql.rs  schema.rs  sealed.rs  shim.rs  tests_cfg.rs  token.rs  traits.rs  types.rs  utils.rs  value.rs
src/audit/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/backend/: constraint_builder.rs  foreign_key_builder.rs  index_builder.rs  mod.rs  query_builder.rs  table_builder.rs  table_ref_builder.rs  trigger_builder.rs  trigger_ref_builder.rs  value_encoder.rs  view_builder.rs
src/constraint/: common.rs  create.rs  mod.rs
src/driver/: mod.rs  postgres.rs  rusqlite.rs  sqlx.rs  sqlx_mysql.rs  sqlx_postgres.rs  sqlx_sqlite.rs
src/expr/: conv.rs  enum.rs  mod.rs  trait.rs
src/extension/: mod.rs
src/foreign_key/: common.rs  create.rs  drop.rs  (+2 more)
tests/: common.rs  derive.rs  error.rs  mod.rs  more-parentheses.rs  raw_sql.rs  runtime-options.rs  size.rs
(+231 files in other folders)
