[workspace]
members = [".", "sea-query-derive"]

[package]
name = "sea-query"
version = "0.29.0"
authors = [
    "Chris Tsang <chris.2y3@outlook.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
    "Ivan Krivosheev <py.krivosheev@gmail.com>",
]
edition = "2021"
description = "🔱 A dynamic query builder for MySQL, Postgres and SQLite"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = ["database"]
keywords = ["database", "sql", "mysql", "postgres", "sqlite"]
rust-version = "1.62"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sea_query"
path = "src/lib.rs"

[dependencies]
sea-query-attr = { version = "^0.1.1", path = "sea-query-attr", optional = true }
sea-query-derive = { version = "^0.3.0", path = "sea-query-derive", optional = true }
serde_json = { version = "^1", optional = true }
chrono = { version = "^0.4", default-features = false, features = ["clock"], optional = true }
postgres-types = { version = "^0", optional = true }
rust_decimal = { version = "^1", optional = true }
bigdecimal = { version = "^0.3", optional = true }
uuid = { version = "^1", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "^1", optional = true }
time = { version = "^0.3", optional = true, features = ["macros", "formatting"] }
ipnetwork = { version = "^0.19", optional = true }
mac_address = { version = "^1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pretty_assertions = { version = "^1" }

[features]
backend-mysql = []
backend-postgres = []
backend-sqlite = []
default = ["derive", "backend-mysql", "backend-postgres", "backend-sqlite"]
derive = ["sea-query-derive"]
attr = ["sea-query-attr"]
postgres-array = []
postgres-interval = ["proc-macro2", "quote"]
thread-safe = []
with-chrono = ["chrono"]
with-json = ["serde_json"]
with-rust_decimal = ["rust_decimal"]
with-bigdecimal = ["bigdecimal"]
with-uuid = ["uuid"]
with-time = ["time"]
with-ipnetwork = ["ipnetwork"]
with-mac_address = ["mac_address"]

[[test]]
name = "test-derive"
path = "tests/derive/mod.rs"
required-features = ["derive"]

[[test]]
name = "test-error"
path = "tests/error/mod.rs"
required-features = []

[[test]]
name = "test-mysql"
path = "tests/mysql/mod.rs"
required-features = ["backend-mysql"]

[[test]]
name = "test-postgres"
path = "tests/postgres/mod.rs"
required-features = ["backend-postgres"]

[[test]]
name = "test-sqlite"
path = "tests/sqlite/mod.rs"
required-features = ["backend-sqlite"]

[[bench]]
name = "basic"
harness = false
