[package]
name = "sea-query-attr"
version = "0.1.1"
authors = [ "Pedro Henrique <hello@exst.fun>" ]
edition = "2021"
description = "Proc macros for useful features in Sea Query"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", default-features = false, features = [ "derive", "parsing", "proc-macro", "printing" ] }
quote = "^1"
heck = "^0.4"
darling = "^0.14"

[dev-dependencies]
trybuild = "^1.0"
sea-query = { version = "^0", path = ".." }
strum = { version = "^0.24", features = ["derive"] }