[workspace]
# A separate workspace

[package]
name = "sea-query-attr"
version = "0.1.3"
authors = [ "Pedro Henrique <hello@exst.fun>" ]
edition = "2024"
description = "Proc macros for useful features in Sea Query"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]
rust-version = "1.85.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
quote = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
darling = { version = "0.20", default-features = false }

[dev-dependencies]
trybuild = "1.0"
sea-query = { version = "1.0.0-rc.1", path = ".." }
strum = { version = "0.25", features = ["derive"] }
