[package]
name = "sea-query-postgres-types"
version = "0.1.0"
authors = ["Richard Jonas <richard.jonas.76@gmail.com>"]
edition = "2024"
description = "Postgres types for using SeaQuery with SQLx"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-query"
repository = "https://github.com/SeaQL/sea-query"
categories = ["database"]
keywords = ["database", "sql", "mysql", "postgres", "sqlite"]
rust-version = "1.85.0"

[lib]

[dependencies]
bytes = { version = "1", default-features = false, optional = true }
postgres-protocol = { version = "0.6", default-features = false, optional = true }
postgres-types = { version = "0.2", default-features = false, optional = true }
ordered-float = { version = "4.6", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["std", "derive"] }
rust_decimal = { version = "1", default-features = false, optional = true }
bigdecimal = { version = "0.4", default-features = false, optional = true }

[features]
default = ["hashable-value"]
postgres-driver = ["postgres-protocol", "postgres-types", "bytes"]
hashable-value = ["ordered-float"]
range = []
serde = ["dep:serde"]
with-rust_decimal = ["rust_decimal"]
with-bigdecimal = ["bigdecimal"]